--- a/ForgeMenuChoice/manifest.json
+++ b/ForgeMenuChoice/manifest.json
@@ -5,6 +5,6 @@
   "Description": "Allows you to pick which enchantment you get.",
   "UniqueID": "atravita.ForgeMenuChoice",
   "EntryDll": "ForgeMenuChoice.dll",
-  "UpdateKeys": [],
+  "UpdateKeys": [ "Nexus:11376", "GitHub:atravita-mods/ForgeMenuChoice" ],
   "MinimumApiVersion": "3.13"
 }
