Wrap text when the tooltip info is loaded, not every tick.....

--- a/ForgeMenuChoice/manifest.json
+++ b/ForgeMenuChoice/manifest.json
@@ -1,5 +1,5 @@
 ﻿{
-  "Name": "ForgeMenuChoice",
+  "Name": "Pick Your Enchantment",
   "Author": "atravita",
   "Version": "1.0.0",
   "Description": "Allows you to pick which enchantment you get.",
