--- a/ForgeMenuChoice/manifest.json
+++ b/ForgeMenuChoice/manifest.json
@@ -1,14 +1,18 @@
 {
   "Name": "Pick Your Enchantment",
   "Author": "atravita",
-  "Version": "1.0.4",
+  "Version": "1.0.5",
   "Description": "Allows you to pick which enchantment you get.",
   "UniqueID": "atravita.ForgeMenuChoice",
   "EntryDll": "ForgeMenuChoice.dll",
   "UpdateKeys": [
     "Nexus:11376",
-    "GitHub:atravita-mods/ForgeMenuChoice",
     "ModDrop:1125882"
   ],
-  "MinimumApiVersion": "3.14"
+  "Dependencies": [
+    {
+      "UniqueID": "atravita.AtraCore"
+    }
+  ],
+  "MinimumApiVersion": "3.15"
 }
