--- a/ForgeMenuChoice/ForgeMenuChoice.csproj
+++ b/ForgeMenuChoice/ForgeMenuChoice.csproj
@@ -8,7 +8,8 @@
   </PropertyGroup>
   
   <PropertyGroup>
-    <Version>1.0.5</Version>
+    <Version>1.1.0</Version>
+    <UniqueID>atravita.ForgeMenuChoice</UniqueID>
   </PropertyGroup>
 
   <ItemGroup>
