--- a/ForgeMenuChoice/ForgeMenuChoice.csproj
+++ b/ForgeMenuChoice/ForgeMenuChoice.csproj
@@ -8,8 +8,11 @@
   </PropertyGroup>
   
   <PropertyGroup>
+    <Name>Pick Your Enchantment</Name>
+    <Description>Allows you to pick which enchantment you get.</Description>
+    <UpdateKeys> Nexus:11376, ModDrop:1125882 </UpdateKeys>
     <Version>1.1.0</Version>
-    <UniqueID>atravita.ForgeMenuChoice</UniqueID>
+    <BaseManifest>..\..\base_dependencies.json</BaseManifest>
   </PropertyGroup>
 
   <ItemGroup>
